<resources>
    <string name="app_name">JavaDesignPatterns"</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Java设计模式</string>
    <string name="nav_header_subtitle">JavaDesignPatterns</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">单一职责原则</string>
    <string name="menu_gallery">里氏替换原则</string>
    <string name="menu_slideshow">依赖倒置原则</string>
    <string name="menu_tools">接口隔离原则</string>
    <string name="a5">迪米特法则</string>
    <string name="a6">开闭原则</string>

    <string name="menu_share">单例模式</string>
    <string name="menu_send">工厂模式</string>

    <string name="b3">抽象工厂模式</string>
    <string name="b4">建造者模式</string>
    <string name="b5">原型模式</string>
    <string name="b6">模板方法模式</string>
    <string name="b7">中介者模式</string>
    <string name="b8">观察者模式</string>
    <string name="b9">访问者模式</string>
    <string name="b10">命令模式</string>
    <string name="b11">责任链模式</string>
    <string name="b12">策略模式</string>
    <string name="b13">迭代器模式</string>
    <string name="b14">解释器模式</string>
    <string name="b15">备忘录模式</string>
    <string name="b16">状态模式</string>
    <string name="b17">桥梁模式</string>
    <string name="b18">适配器模式</string>
    <string name="b19">组合模式</string>
    <string name="b20">外观模式</string>
    <string name="b21">装饰模式</string>
    <string name="b22">享元模式</string>
    <string name="b23">代理模式</string>

    <string name="banner_ad_unit_id">ca-app-pub-7420611722821229/7305395362</string>

</resources>
